--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 plugins:
   - jekyll-feed
-title: Dzhavat Ushev Blog
-description: Welcome to my blog
-author: Dzhavat Ushev
+title: rspanews
+description: Official News Centre of RSPA
+author: rspa
